[tool.poetry]
name = "django-gov-notify"
version = "0.3.0"
description = "A GOV.UK Notify flavoured Django email backend"
authors = ["Nick Smith <nick.smith@torchbox.com>"]
readme = "README.md"
homepage = "https://github.com/nimasmi/django-gov-notify"
repository = "https://github.com/nimasmi/django-gov-notify"
keywords = ["email", "Django"]
classifiers = [
    "Development Status :: 4 - Beta",
    "Environment :: Web Environment",
    "Intended Audience :: Developers",
    "Operating System :: OS Independent",
    "Topic :: Communications :: Email",
    "Framework :: Django",
    "Framework :: Django :: 2.2",
    "Framework :: Django :: 3.1",
    "Framework :: Django :: 3.2",
    "License :: OSI Approved :: BSD License",
    "Programming Language :: Python :: 3.6",
    "Programming Language :: Python :: 3.7",
    "Programming Language :: Python :: 3.8",
    "Programming Language :: Python :: 3.9",
]
license = "BSD-2-Clause"

[tool.poetry.dependencies]
python = ">=3.6.1,<3.10"
django = ">=2.2.12,<4.0"
notifications-python-client = "^6.1.0"

[tool.poetry.dev-dependencies]
black = "^19.10b0"
isort = "^4.3.21"
flake8 = "^3.8.2"
pre-commit = "^2.4.0"
detect-secrets = "0.13.0"
factory-boy = "^3.2.0"

[build-system]
requires = ["poetry>=0.12"]
build-backend = "poetry.masonry.api"
