[tool.poetry]
name = "django-gov-notify"
version = "0.4.0"
description = "A GOV.UK Notify flavoured Django email backend"
authors = ["Nick Smith <nick.smith@torchbox.com>"]
readme = "README.md"
homepage = "https://github.com/nimasmi/django-gov-notify"
repository = "https://github.com/nimasmi/django-gov-notify"
keywords = ["email", "Django"]
classifiers = [
    "Development Status :: 4 - Beta",
    "Environment :: Web Environment",
    "Intended Audience :: Developers",
    "Operating System :: OS Independent",
    "Topic :: Communications :: Email",
    "Framework :: Django",
    "Framework :: Django :: 3.2",
    "Framework :: Django :: 4.1",
    "Framework :: Django :: 4.2",
    "License :: OSI Approved :: BSD License",
    "Programming Language :: Python :: 3.8",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
]
license = "BSD-2-Clause"

[tool.poetry.dependencies]
python = ">=3.8,<3.12"
django = ">=3.2,<5.0"
notifications-python-client = "^8.1.0"

[tool.poetry.dev-dependencies]
black = "^23.10.1"
isort = "^5.12.0"
flake8 = "^5.0.4"
pre-commit = "^3.5.0"
detect-secrets = "1.4.0"
factory-boy = "^3.2.0"

[build-system]
requires = ["poetry-core>=1.2.0"]
build-backend = "poetry.masonry.api"
